# FaceBlit

./: .gitignore  README.md  build.gradle  local.properties
VS/: FaceBlit.sln  FaceBlit.vcxproj  FaceBlit.vcxproj.filters  main.cpp  main_extension.cpp
VS/include/SDL2/: SDL_config.h  begin_code.h
VS/include/dlib/cmake_utils/test_for_cudnn/: CMakeLists.txt
VS/lib/: opencv_world450.lib  opencv_world450d.lib
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/texler/faceblit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DlibDetector.cpp  DlibDetector.h  FacemarkDetector.cpp  StylizeImage.cpp  StylizeImage.h  cartesian_coordinate_system_helper.h  common_utils.cpp  common_utils.h  dlib_detector.cpp  dlib_detector.h  facemark_detector.cpp  facemark_detector.h  imgwarp_mls.cpp  imgwarp_mls_similarity.cpp  imgwarp_piecewiseaffine.cpp  native-lib.cpp  style_cache.h  style_transfer.cpp  style_transfer.h  time_helper.h  window_helper.h
app/src/main/java/texler/faceblit/: IRecyclerViewCallback.java  JavaNativeInterface.java  MainActivity.java  RecyclerViewAdapter.java  StyleTransferAnalyzer.java
app/src/main/java/texler/faceblit/fragments/: CameraFragment.java  GalleryFragment.java  PermissionsFragment.java  PhotoFragment.java  StyleSelectorFragment.java
app/src/main/java/texler/faceblit/utils/: BitmapHelper.java  ResourceHelper.java  ViewExtensions.java
app/src/main/jniLibs/opencv-android-4.5.0_include/opencv2/: cvconfig.h
app/src/main/opengl/: opengl_main.cpp  opengl_main.hpp  shader.cpp  shader.hpp
app/src/main/opengl/shader/: blending.frag  pass_tex.frag  pass_tex.vert  pass_tex_coords.vert  pass_yellow.frag  styleblit_blend.frag  styleblit_main.frag
app/src/main/res/anim/: anim_alpha.xml  anim_translate_close.xml  anim_translate_open.xml
app/src/main/res/drawable/: highlight_frame.xml  ic_back.xml  ic_delete.xml  ic_photo.xml  ic_share.xml  ic_show_styles.xml  ic_stylize_all.xml  ic_stylize_face.xml  ic_stylize_scope.xml
app/src/main/res/layout/: activity_main.xml  camera_ui_container.xml  fragment_camera.xml  fragment_gallery.xml  fragment_style_selector.xml  recycler_view_item.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: lm_bronzestatue.txt  lm_bronzestatue_480x640.txt  lm_charcoalman.txt  lm_charcoalman_480x640.txt  lm_expressive.txt  lm_expressive_480x640.txt  lm_fonz.txt  lm_frank.txt  lm_frank_480x640.txt  lm_girl.txt  lm_girl_480x640.txt  lm_het.txt  lm_het_480x640.txt  lm_illegalbeauty.txt  lm_illegalbeauty_480x640.txt  lm_japan.txt  lm_ken.txt  lm_ken_480x640.txt  lm_laurinbust.txt  lm_laurinbust_480x640.txt  lm_lincolnbust.txt  lm_lincolnbust_480x640.txt  lm_malevich.txt  lm_malevich_480x640.txt  lm_oilman.txt  lm_oilman_480x640.txt  lm_oldman.txt  lm_oldman_480x640.txt  lm_prisma.txt  lm_prisma_480x640.txt  lm_sketch.txt  lm_stonebust.txt  lm_stonebust_480x640.txt  lm_target1.txt  lm_target2.txt  lm_watercolorgirl.txt  lm_watercolorgirl_480x640.txt  lm_woodenmask.txt  lm_woodenmask_480x640.txt
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/texler/faceblit/: ExampleUnitTest.java
dlib-19.21/dlib/: revision.h
dlib-19.21/dlib/all/: source.cpp
gradle/wrapper/: gradle-wrapper.properties
keystores/: upload-keystore.jks
tools/: tools.py
